# DealSummaryGithub

./: .env.example  .gitignore  README.md  REQUIREMENTS_VALIDATION.md  example_openrouter.py  pyproject.toml  test_deals.csv
.kiro/specs/deal-summary-qa-bot/: design.md  requirements.md  tasks.md
examples/: README.md  sample_deals.csv  sample_output.md  single_deal_example.txt
src/: __init__.py  __main__.py  cli.py  pipeline.py  prompts.py  schemas.py
tests/: test_cli.py  test_performance.py  test_pipeline.py  test_prompts.py  test_schemas.py
tests/test_data/: edge_cases.csv  sample_deals.csv
